--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>JS Promises Part 2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex justify-content-center mt-5">
+                <button class="btn btn-lg btn-secondary text-white">GIMME A CARD!</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3">
 
+            </div>
+        </div>
+    </div>
 
-    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
