--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <div class="container">
         <div class="row">
             <div class="col d-flex justify-content-center mt-5">
-                <button class="btn btn-lg btn-secondary text-white">GIMME A CARD!</button>
+                <button type="button" class="btn btn-lg btn-secondary text-white">GIMME A CARD!</button>
             </div>
         </div>
         <div class="row">
-            <div class="col-3">
-
+            <div class="col card-container d-flex justify-content-center mt-5">
             </div>
         </div>
     </div>
