--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col d-flex justify-content-center mt-5">
+            <div class="col d-flex justify-content-center mt-5 heading-container">
                 <button type="button" class="btn btn-lg btn-secondary text-white">GIMME A CARD!</button>
             </div>
         </div>
